Clean up layout.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,21 +14,15 @@
   <div class="column">
 
     <header> 
-      <h1>Pjaxhole</h1> 
+      <h1>Nancy</h1> 
     </header>
 
     <section id="content" class="body">
       <%= yield %>
     </section>
     
-    <div id="loading">  
-       <div class="message">  
-         Loading... Loading... Loading... Loading...
-       </div>  
-    </div>
-
     <footer>
-      It's a hole you stick your Pjax in. Duh.
+      Nancy boy.
     </footer> 
   
   </div> 
